# knowledbase-bot

./: .env.template  .gitignore  README.md  chatbot.py  chatbot_vector_search.py  constants.py  ingest.py  pyproject.toml  requirements.txt
ORG-KB/: People Policies.docx  architecture-guidelines.md  leadership.docx
